# OPEKEPE-SYSTEM-main

./: LICENSE  README.el.md  README.en.md  README.md  agroledger.sqlite3  pyproject.toml
configs/: cap_rules.example.json
docs/: architecture.md  product_blueprint.md  task_breakdown.md
docs/el/: architecture.md  product_blueprint.md  task_breakdown.md
schemas/: agro_subsidy_core.sql
scripts/: run_dashboard.py
src/agropekepe/: __init__.py  app.py  cli.py  crisis.py  eligibility.py  finance.py  geo.py  integrations.py  models.py  repository.py  serialization.py  services.py
tests/: test_api.py  test_eligibility.py  test_services.py
