[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agropekepe"
version = "0.1.0"
description = "Runnable MVP application for a transparent agricultural subsidies management platform."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agroledger = "agropekepe.cli:main"
